[package]
name = "Push-Back-934Z"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# These fields configure default behavior for uploads with `cargo v5`.
[package.metadata.v5]
upload-strategy = "differential"
slot = 1
icon = "cool-x"
compress = true

[dependencies]
futures = { version = "0.3.31" }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0.140" }

[dependencies.vexide]
version = "0.8.0-alpha.2"
features = ["full", "vex-sdk-jumptable", "vex-sdk-mock"]
