[package]
name = "Push-Back-934Z"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# These fields configure default behavior for uploads with `cargo v5`.
[package.metadata.v5]
upload-strategy = "differential"
slot = 1
name = "934Z Main"
description = "934Z Main Pushback Code"
icon = "cool-x"
compress = true

[dependencies]
nalgebra = "0.34.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0.140" }

[target.'cfg(not(target_os = "vexos"))'.dependencies]
vex-sdk-mock = { path = "./vex-sdk-mock" }
robot-sim = { path = "./robot-sim" }

[target.'cfg(target_os = "vexos")'.dependencies]
vex-sdk-jumptable = "0.1.1"

[dependencies.vexide]
version = "0.8.0"
features = ["full"]
