[package]
name = "vex-sdk-mock"
description = "Mocked version of the VEX SDK for testing purposes and running vexide programs on host targets."
repository = "https://github.com/vexide/vex-sdk/"
authors = ["Tropical"]
license = "MIT"
categories = ["science::robotics", "embedded"]
keywords = ["vex", "vex-v5", "vex-robotics", "robotics"]
version = "0.1.0"
edition = "2024"
cargo-args = [
    "-Zbuild-std=core,alloc,compiler_builtins",
    "-Zbuild-std-features=compiler-builtins-mem"
]

[dependencies]
spin = "0.10.0"
vex-sdk = "0.28.0"
